[project]
name = "k-lingo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.121.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.27",
]
